deploy/pash.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pash
spec:
  selector:
    app: pash
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  type: ClusterIP
