deploy/pash.Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pash
spec:
  to:
    kind: Service
    name: pash
  port:
    targetPort: 8501
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
